hphp/hack/test/typecheck/new_inference/transitive_simplify_2bis.php.like_types.exp
File "transitive_simplify_2bis.php", line 27, characters 11-12:
Invalid argument (Typing[4110])
File "transitive_simplify_2bis.php", line 15, characters 15-19:
Expected Co<[unresolved]>
File "transitive_simplify_2bis.php", line 11, characters 19-23:
But got dynamic because it is an unenforceable type
File "transitive_simplify_2bis.php", line 28, characters 11-12:
Invalid argument (Typing[4110])
File "transitive_simplify_2bis.php", line 15, characters 15-19:
Expected Co<[unresolved]>
File "transitive_simplify_2bis.php", line 11, characters 19-23:
But got dynamic because it is an unenforceable type
File "transitive_simplify_2bis.php", line 29, characters 10-12:
Invalid argument (Typing[4110])
File "transitive_simplify_2bis.php", line 19, characters 15-19:
Expected Co<[unresolved]>
File "transitive_simplify_2bis.php", line 15, characters 27-31:
But got dynamic because it is an unenforceable type
File "transitive_simplify_2bis.php", line 29, characters 15-17:
Invalid argument (Typing[4110])
File "transitive_simplify_2bis.php", line 19, characters 26-30:
Expected Co<[unresolved]>
File "transitive_simplify_2bis.php", line 15, characters 27-31:
But got dynamic because it is an unenforceable type
